consider numbered header classes as part of the implementation